# heimdall

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DecisionsLog.md  Design.md  Optimistic FROST.md  PLAN.md  README.md  Specification.md  build.rs  flake.nix  heimdall.localdkg.toml  heimdall.testnet4.toml  heimdall.toml  questions.md  tasks.md  technical_questions.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
analysis/: Pools 2026-01-27 - pools.csv  stake-threshold-analysis.md
benches/: cardano_transcript.rs  dkg_fault_circuits.rs  dkg_fault_onchain.rs
deploy/: README.md  build-linux.sh  build-musl.sh  deploy.sh
deploy/nixos/: heimdall-mover.nix
scripts/: generate_dkg_fault_aiken_project.sh
scripts/dkz/: README.md  demo-spo-1.sh  demo-spo-2.sh  demo-spo-3.sh  register-spo-1.sh  register-spo-2.sh  register-spo-3.sh  show-roster.sh
src/: config.rs  lib.rs  main.rs
src/bitcoin/: mod.rs  taproot.rs  tm_builder.rs
src/cardano/: always_ok.rs  apply_ban.rs  ban_list.rs  bf_http.rs  blockfrost_chain.rs  blockfrost_source.rs  blueprint.rs  btc_rpc.rs  dkg_roster.rs  fault_proof.rs  federation_reset.rs  hash.rs  init_scripts.rs  linked_list.rs  local_eval.rs  mock.rs  mod.rs  mpf.rs  pallas_source.rs  pegin_datum.rs  pegin_source.rs  pegout_datum.rs  plutus.rs  publish.rs  register_pool.rs  register_spo.rs  registry.rs  roster.rs  stake.rs  tm_chain.rs  treasury_bootstrap.rs  treasury_datum.rs  treasury_info.rs  treasury_spend.rs  tx_common.rs  update_y.rs  wallet.rs
src/circuits/: cardano_transcript.rs  commitment.rs  dkg_fault.rs  fault_evidence.rs  mod.rs  signature.rs
src/demo/: orchestrator.rs
src/epoch/: dkg.rs  fixture.rs  log.rs  machine.rs  mocks.rs  mod.rs  persist.rs  signing.rs  state.rs  traits.rs
src/frost/: dkg.rs  mod.rs  participant.rs  signing.rs  types.rs
src/gadgets/: mod.rs  nonnative.rs  secp256k1.rs
src/http/: auth.rs  canonical.rs  client.rs  frost_bridge.rs  mod.rs  payloads.rs  peer_network.rs  server.rs  wire.rs
tests/: dkg_participant.rs  http_client.rs  http_server.rs  integration_demo.rs  payloads.rs  serialization.rs  signing_participant.rs
tests/fixtures/: equivocation_onchain_vector.ak  fault_verifier_code.txt  spo_bans_code.txt  treasury_info_code.txt
