[package]
name = "heimdall"
version = "0.1.0"
edition = "2024"

[dependencies]
dusk-plonk = { version = "0.22.0", default-features = false, features = ["alloc"] }
dusk-bls12_381 = "0.14"
dusk-bytes = "0.1"
frost-secp256k1-tr = { version = "3.0.0-rc.0", features = ["serialization"] }
ff = "0.13"
rayon = "1.10"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
bitcoin = { version = "0.32", features = ["rand-std"] }
