[package]
name = "heimdall"
version = "0.1.0"
edition = "2024"

[dependencies]
dusk-plonk = { version = "0.22.0", default-features = false, features = ["alloc"] }
dusk-bls12_381 = "0.14"
dusk-bytes = "0.1"
frost-secp256k1-tr = { version = "3.0.0-rc.0", features = ["serialization"] }
ff = "0.13"
blake2b_simd = "1.0.3"
halo2-base = { git = "https://github.com/vlasin/halo2-lib.git", rev = "2f753ef0508d5d7500865f2ca803069bcfe4c80d", default-features = false, features = ["halo2-axiom"] }
halo2-ecc = { git = "https://github.com/vlasin/halo2-lib.git", rev = "2f753ef0508d5d7500865f2ca803069bcfe4c80d", default-features = false, features = ["halo2-axiom"] }
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon.git", rev = "19d3b09481bda0e95e7c005906365d070fceb752" }
sha2 = "0.10"
rayon = "1.10"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
hex = "0.4"
k256 = { version = "0.13", features = ["arithmetic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
bitcoin = { version = "0.32", features = ["rand-std"] }
async-trait = "0.1"
pallas-network = "0.32"
pallas-primitives = "0.32"
pallas-addresses = "0.32"
pallas-codec = "0.32"
pallas-crypto = "0.32"
blockfrost = "1.2.3"
pallas-traverse = "0.32"
whisky = { version = "1.0.25", default-features = false, features = ["pallas"] }
whisky-pallas = "1.0.25"
whisky-common = "1.0.25"
pallas-wallet = "0.32"
uplc = "1.1.10"

[[bench]]
name = "dkg_fault_circuits"
harness = false

[[bench]]
name = "dkg_fault_onchain"
harness = false

[dev-dependencies]
plutus-halo2-verifier-gen = { git = "https://github.com/vlasin/plutus-halo2-verifier-gen.git", rev = "e55547178d2fb1f286ba2d6372b1c5e4193842ca" }
